--- a/frmmain.ui
+++ b/frmmain.ui
@@ -80,7 +80,7 @@
        </size>
       </property>
       <property name="text">
-       <string>Vornahme:</string>
+       <string>Vorname:</string>
       </property>
      </widget>
     </item>
@@ -90,7 +90,7 @@
     <item row="3" column="0">
      <widget class="QLabel" name="lblNachname">
       <property name="text">
-       <string>Nachnahme:</string>
+       <string>Nachname:</string>
       </property>
      </widget>
     </item>
